# mini_sistema_rh_projeto_final

./: CMakeLists.txt  CMakePresets.json  README.md
controllers/rh/: rh.cpp  rh.hpp
files/: rh.json
models/colaborador/: colaborador.cpp  colaborador.hpp
models/data/: data.cpp  data.hpp
models/evento/: evento.cpp  evento.hpp
models/formacao/: formacao.cpp  formacao.hpp
models/nota/: nota.cpp  nota.hpp
models/rh/: rh.cpp  rh.hpp
src/: main.cpp
